add catalog templates, and other modifications

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,10 +1,26 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://cdn.jsdelivr.net/g/jquery@3.2.1,bootstrap@4.0.0-alpha.6"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+    <title>{{ page_header }} | Django project</title>
 </head>
 <body>
+
+    <img src="{% static 'images/pikachu.png' %}" width="400px" height="250px">
+    {% if page_header %}
+    <div class="container">
+        <div class="page-header">
+            <h1>{{ page_header }}</h1>
+        </div>
+    </div>
+    {% endif %}
+
 {% block content %}{% endblock %}
 </body>
 </html>
