--- a/catalog/templates/catalog/catalog.html
+++ b/catalog/templates/catalog/catalog.html
@@ -2,13 +2,52 @@
 
 {% block content %}
 
-    {% for item in catalog%}
-        <div>
-            <h1><a href="{% url 'catalog:details' item.id %}">{{item.title}}</a></h1>
+    <div class="container">
+        {% for item in catalog%}
             <div>
-                {{item.description}}
+                <h1><a href="{% url 'catalog:details' item.id %}">{{item.title}}</a></h1>
+                <div>
+                    {{ item.description|truncatechars:200 }}
+                </div>
             </div>
+        {% endfor %}
+
+        <div class="text-center">
+            <ul class="pagination">
+                {% if catalog.number > 1 %}
+                    <li><a href="?page=1">&laquo; First page</a></li>
+                {% else %}
+                    <li class="disabled"><a href="">&laquo; First page</a></li>
+                {% endif %}
+
+                {% if catalog.has_previous %}
+                    <li><a href="?page={{ catalog.previous_page_number }}">&laquo; Prev</a></li>
+                {% else %}
+                    <li class="disabled"><a href="">&laquo; Prev</a></li>
+                {% endif %}
+
+                {% if catalog.number > 1 %}
+                    {% for page in catalog.paginator.page_range %}
+                        <li class="{% if catalog.number == page %}active{% endif %}">
+                            <a href="?page={{ page }}">{{ page }}</a>
+                        </li>
+                    {% endfor %}
+                {% endif %}
+
+                {% if catalog.has_next %}
+                    <li><a href="?page={{ catalog.next_page_number }}">Next &raquo;</a></li>
+                {% else %}
+                    <li class="disabled"><a href="">Next &raquo;</a></li>
+                {% endif %}
+
+
+                {% if catalog.number < catalog.paginator.num_pages %}
+                    <li><a href="?page={{ catalog.paginator.num_pages }}">Last page &raquo;</a></li>
+                {% else %}
+                    <li class="disabled"><a href="">Last page &raquo;</a></li>
+                {% endif %}
+            </ul>
         </div>
-    {% endfor %}
+    </div>
 
 {% endblock %}
